<resources>
    <string name="app_name">Athis Mons</string>

    <string-array name="tabs">
        <item>Actualités</item>
        <item>Agenda</item>
        <item>Incidents</item>
        <item>Menus</item>
        <item>Annuaire</item>
        <item>Espace perso</item>
    </string-array>

    <string name="tab_news">Actualités</string>
    <string name="tab_agenda">Agenda</string>
    <string name="tab_incidents">Incidents</string>
    <string name="tab_menus">Menus</string>
    <string name="tab_directory">Ressources</string>

    <string name="menu_refresh">Rafraichir</string>

    <string name="news_fragment_refreshing">Rechargement des actualités...</string>
    <string name="news_fragment_loading_internet_failure">Impossible de charger les actualités, veuillez vérifier votre connexion.</string>

    <string name="agenda_fragment_refreshing">Rechargement de l\'agenda...</string>
    <string name="agenda_fragment_loading_internet_failure">Impossible de charger l\'agenda, veuillez vérifier votre connexion.</string>

    <string name="directory_fragment_refreshing">Rechargement de l\'annuaire...</string>
    <string name="directory_fragment_loading_internet_failure">Impossible de charger l\'annuaire, veuillez vérifier votre connexion.</string>

    <string name="menu_fragment_refreshing">Rechargement des menus...</string>
    <string name="menu_fragment_loading_internet_failure">Impossible de charger les menus, veuillez vérifier votre connexion.</string>

    <string name="directory_detail_activity_cards_empty">Aucune fiche n\'a été trouvée pour cet annuaire.</string>

    <string name="card_detail_email">Mél : %1$s</string>
    <string name="card_detail_website">Site : %1$s</string>
    <string name="card_detail_phone_label">Téléphones :</string>
    <string name="card_detail_contact_label">Contact :</string>
    <string name="card_detail_locate">Localiser</string>

    <string name="error_no_maps">Impossible de localiser l\'adresse, vous n\'avez pas de plans installé sur le téléphone</string>

    <string name="incident_rules_1">Ce formulaire vous permet de déclarer des incidents d\'ordre technique localisés sur le territoire de la ville d\'Athis-Mons.
        Afin de faciliter l\'intervention des services,
        <b>merci d\'être le plus précis possible sur les renseignements que vous founissez (localisation et description).</b>
    </string>
    <string name="incident_rules_2">Les déclarations anonymes ou sans description ne seront pas traitées.</string>
    <string name="incident_type">Nature de l\'incident</string>
    <string name="incident_add_picture">Ajouter une photo</string>
    <string name="incident_change_picture">Changer la photo</string>
    <string name="incident_address_label">Adresse</string>
    <string name="incident_locate_myself">Localisez-moi</string>
    <string name="incident_description_label">Description</string>
    <string name="incident_lastname_label">Nom</string>
    <string name="incident_firstname_label">Prénom</string>
    <string name="incident_email_label">Email</string>
    <string name="incident_send">Envoyer la déclaration</string>
    <string name="incident_address_location_failed">Impossible de déterminer votre adresse à partir de votre localisation.</string>
    <string name="incident_submit_success">L\'incident a été envoyé avec succès à la mairie.</string>
    <string name="incident_submit_failed">Impossible d\'envoyer l\'incident à la mairie.</string>

    <string name="incident_location_progress_dialog_title">Localisation en cours</string>
    <string name="incident_location_progress_dialog_message">Veuillez patienter pendant que l\'application essaie de déterminer l\'adresse à partir de votre position.</string>

    <string name="incident_submit_progress_dialog_title">Envoi en cours</string>
    <string name="incident_submit_progress_dialog_message">Veuillez patienter pendant l\'envoi de l\'incident.</string>

    <string name="incident_types_title">Nature de l\incident</string>
    <string-array name="incident_types">
        <item>Nature de l\'accident</item>
        <item>Voirie urbaine</item>
        <item>Eclairage public</item>
        <item>Feux tricolores</item>
        <item>Signalisation horizontale et verticale</item>
        <item>Graffitis, tags</item>
        <item>Collecte des déchets, tri sélectif</item>
        <item>Épaves et véhicules ventouses</item>
        <item>Dégradations sur la voie publique</item>
        <item>Espaces verts</item>
        <item>Assainissement</item>
        <item>Autre</item>
    </string-array>

</resources>