<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="fill_parent" android:layout_height="fill_parent"
              android:orientation="vertical">

    <ScrollView android:layout_width="fill_parent" android:layout_height="fill_parent">
        <LinearLayout android:layout_width="fill_parent" android:layout_height="fill_parent"
                      android:orientation="vertical"
                      android:padding="5dip">

            <TextView android:id="@+id/incident_rules_1"
                      android:layout_width="fill_parent" android:layout_height="wrap_content"
                      android:text="@string/incident_rules_1"/>

            <TextView android:id="@+id/incident_rules_2"
                      android:layout_width="fill_parent" android:layout_height="wrap_content"
                      android:layout_marginBottom="10dip"
                      android:textColor="@color/red"
                      android:textStyle="bold"
                      android:text="@string/incident_rules_2"/>

            <!-- incident type button -->
            <Button android:id="@+id/incident_type_button"
                    android:layout_width="fill_parent" android:layout_height="wrap_content"
                    android:layout_marginLeft="20dip" android:layout_marginRight="20dip"
                    android:layout_marginBottom="10dip"
                    android:text="@string/incident_type"/>

            <!-- picture button -->
            <Button android:id="@+id/incident_add_picture_button"
                    android:layout_width="fill_parent" android:layout_height="wrap_content"
                    android:layout_marginLeft="20dip" android:layout_marginRight="20dip"
                    android:layout_marginBottom="15dip"
                    android:text="@string/incident_add_picture"/>

            <!-- description -->
            <TextView android:id="@+id/incident_description_label"
                      android:layout_width="fill_parent" android:layout_height="wrap_content"
                      android:textStyle="bold"
                      android:text="@string/incident_description_label"/>

            <EditText android:id="@+id/incident_description"
                      android:layout_width="fill_parent" android:layout_height="wrap_content"
                      android:layout_marginBottom="15dip"/>

            <!-- address -->
            <TextView android:id="@+id/incident_address_label"
                      android:layout_width="fill_parent" android:layout_height="wrap_content"
                      android:textStyle="bold"
                      android:text="@string/incident_address_label"/>

            <EditText android:id="@+id/incident_address"
                      android:layout_width="fill_parent" android:layout_height="wrap_content"/>

            <!-- locate button -->
            <Button android:id="@+id/incident_locate_button"
                    android:layout_width="fill_parent" android:layout_height="wrap_content"
                    android:layout_marginLeft="20dip" android:layout_marginRight="20dip"
                    android:layout_marginBottom="15dip"
                    android:text="@string/incident_locate_myself"/>

            <!-- last name -->
            <TextView android:id="@+id/incident_lastname_label"
                      android:layout_width="fill_parent" android:layout_height="wrap_content"
                      android:textStyle="bold"
                      android:text="@string/incident_lastname_label"/>

            <EditText android:id="@+id/incident_lastname"
                      android:layout_width="fill_parent" android:layout_height="wrap_content"
                      android:layout_marginBottom="15dip"/>

            <!-- first name -->
            <TextView android:id="@+id/incident_firstname_label"
                      android:layout_width="fill_parent" android:layout_height="wrap_content"
                      android:textStyle="bold"
                      android:text="@string/incident_firstname_label"/>

            <EditText android:id="@+id/incident_firstname"
                      android:layout_width="fill_parent" android:layout_height="wrap_content"
                      android:layout_marginBottom="15dip"/>

            <!-- email -->
            <TextView android:id="@+id/incident_email_label"
                      android:layout_width="fill_parent" android:layout_height="wrap_content"
                      android:textStyle="bold"
                      android:text="@string/incident_email_label"/>

            <EditText android:id="@+id/incident_email"
                      android:layout_width="fill_parent" android:layout_height="wrap_content"
                      android:layout_marginBottom="15dip"/>

            <!-- send button -->
            <Button android:id="@+id/incident_send_button"
                    android:layout_width="fill_parent" android:layout_height="wrap_content"
                    android:layout_marginLeft="20dip" android:layout_marginRight="20dip"
                    android:layout_marginBottom="15dip"
                    android:text="@string/incident_send"/>
        </LinearLayout>
    </ScrollView>
</LinearLayout>