<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="fill_parent" android:layout_height="fill_parent"
                android:padding="6dip">

    <TextView android:id="@+id/card_detail_title"
              android:layout_width="fill_parent" android:layout_height="wrap_content"
              android:layout_marginBottom="10dip"
              android:textSize="18sp"
              android:textStyle="bold"
              android:textColor="@android:color/black"
              android:text="Title"/>


    <ScrollView android:layout_width="fill_parent" android:layout_height="fill_parent"
                android:layout_below="@id/card_detail_title">

        <LinearLayout android:layout_width="fill_parent" android:layout_height="fill_parent"
                      android:orientation="vertical">

            <TextView android:id="@+id/card_detail_building"
                      android:layout_width="fill_parent" android:layout_height="wrap_content"
                      android:text="Building"/>

            <TextView android:id="@+id/card_detail_street"
                      android:layout_width="fill_parent" android:layout_height="wrap_content"
                      android:text="Street"/>

            <TextView android:id="@+id/card_detail_postalcode_city"
                      android:layout_width="fill_parent" android:layout_height="wrap_content"
                      android:text="Postal code City"/>

            <TextView android:id="@+id/card_detail_complement"
                      android:layout_width="fill_parent" android:layout_height="wrap_content"
                      android:text="Complement"/>

            <TextView android:id="@+id/card_detail_contact_label"
                      android:layout_width="fill_parent" android:layout_height="wrap_content"
                      android:layout_marginTop="10dip"
                      android:text="@string/card_detail_contact_label"/>

            <TextView android:id="@+id/card_detail_contact"
                      android:layout_width="fill_parent" android:layout_height="wrap_content"
                      android:text="Contact"/>

            <TextView android:id="@+id/card_detail_phone_label"
                      android:layout_width="fill_parent" android:layout_height="wrap_content"
                      android:layout_marginTop="10dip"
                      android:text="@string/card_detail_phone_label"/>

            <TextView android:id="@+id/card_detail_phone_1"
                      android:layout_width="fill_parent" android:layout_height="wrap_content"
                      android:text="Phone 1"/>

            <TextView android:id="@+id/card_detail_phone_2"
                      android:layout_width="fill_parent" android:layout_height="wrap_content"
                      android:text="Phone 2"/>

            <TextView android:id="@+id/card_detail_email"
                      android:layout_width="fill_parent" android:layout_height="wrap_content"
                      android:layout_marginTop="10dip"
                      android:text="@string/card_detail_email"/>

            <TextView android:id="@+id/card_detail_website"
                      android:layout_width="fill_parent" android:layout_height="wrap_content"
                      android:text="@string/card_detail_website"/>

            <ImageButton android:id="@+id/card_detail_locate"
                         android:layout_width="wrap_content" android:layout_height="wrap_content"
                         android:layout_gravity="center_horizontal"
                         android:layout_marginTop="30dip" android:layout_marginBottom="15dip"
                         android:src="@drawable/btn_localize"
                         android:background="@android:color/transparent"/>

            <ImageView android:id="@+id/card_detail_picture"
                       android:layout_width="wrap_content" android:layout_height="wrap_content"
                       android:layout_gravity="center"/>

        </LinearLayout>
    </ScrollView>
</RelativeLayout>